# src/main/resources/swagger/tweet.yaml
@@ -10,56 +10,56 @@ info:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
 
-host: "petstore.swagger.io"
+host: "tweet.swagger.io"
 basePath: "/api/v1"
 
 tags:
-- name: "pet"
-  description: "Everything about your Pets"
+- name: "tweet"
+  description: "Everything about your Tweets"
   externalDocs:
     description: "Find out more"
     url: "http://swagger.io"
 
 schemes:
-- "https"
+#- https
 - "http"
 
-consumes:
-  - application/json
-produces:
-  - application/json
+# consumes:
+#   - application/json
+# produces:
+#   - application/json
 
 paths:
-  /pet:
+  /tweet:
     post:
       tags:
-      - "pet"
-      summary: "Add a new pet to the store"
+      - "tweet"
+      summary: "Add a new tweet to the store"
       description: ""
-      operationId: "addPet"
+      operationId: "addTweet"
       parameters:
       - in: "body"
         name: "body"
-        description: "Pet object that needs to be added to the store"
+        description: "Tweet object that needs to be added to the store"
         required: true
         schema:
-          $ref: "#/definitions/Pet"
+          $ref: "#/definitions/Tweet"
       responses:
         405:
           description: "Invalid input"
-  /pet/{petId}:
+  /tweet/{tweetId}:
     get:
       tags:
-      - "pet"
-      summary: "Find pet by ID"
-      description: "Returns a single pet"
+      - "tweet"
+      summary: "Find tweet by ID"
+      description: "Returns a single tweet"
       operationId: "getPetById"
       produces:
       - "application/json"
       parameters:
-      - name: "petId"
+      - name: "tweetId"
         in: "path"
-        description: "ID of pet to return"
+        description: "ID of tweet to return"
         required: true
         type: "integer"
         format: "int64"
@@ -67,47 +67,17 @@ paths:
         200:
           description: "successful operation"
           schema:
-            $ref: "#/definitions/Pet"
+            $ref: "#/definitions/Tweet"
         400:
           description: "Invalid ID supplied"
         404:
-          description: "Pet not found"
-    post:
-      tags:
-      - "pet"
-      summary: "Updates a pet in the store with form data"
-      description: ""
-      operationId: "updatePetWithForm"
-      # consumes:
-      # - "application/x-www-form-urlencoded"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "petId"
-        in: "path"
-        description: "ID of pet that needs to be updated"
-        required: true
-        type: "integer"
-        format: "int64"
-      - name: "name"
-        in: "formData"
-        description: "Updated name of the pet"
-        required: false
-        type: "string"
-      - name: "status"
-        in: "formData"
-        description: "Updated status of the pet"
-        required: false
-        type: "string"
-      responses:
-        405:
-          description: "Invalid input"
+          description: "Tweet not found"
     delete:
       tags:
-      - "pet"
-      summary: "Deletes a pet"
+      - "tweet"
+      summary: "Deletes a tweet"
       description: ""
-      operationId: "deletePet"
+      operationId: "deleteTweet"
       produces:
       - "application/json"
       parameters:
@@ -115,9 +85,9 @@ paths:
         in: "header"
         required: false
         type: "string"
-      - name: "petId"
+      - name: "tweetId"
         in: "path"
-        description: "Pet id to delete"
+        description: "Tweet id to delete"
         required: true
         type: "integer"
         format: "int64"
@@ -125,7 +95,7 @@ paths:
         400:
           description: "Invalid ID supplied"
         404:
-          description: "Pet not found"
+          description: "Tweet not found"
 
 definitions:
   User:
@@ -140,15 +110,7 @@ definitions:
         type: "integer"
         format: "int32"
         description: "User Status"
-  Tag:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      name:
-        type: "string"
-  Pet:
+  Tweet:
     type: "object"
     required:
     - "name"
@@ -165,13 +127,9 @@ definitions:
         type: "array"
         items:
           type: "string"
-      tags:
-        type: "array"
-        items:
-          $ref: "#/definitions/Tag"
       status:
         type: "string"
-        description: "pet status in the store"
+        description: "tweet status in the store"
         enum:
         - "available"
         - "pending"
